# switchboard

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.claude/commands/: send.md
switchboard/: config.py  main.py
switchboard/queue/: __init__.py  redis_queue.py
switchboard/routers/: auth.py  messages.py  notify.py  send.py
switchboard/routers/webhooks/: __init__.py  whatsapp.py
switchboard/transports/: signal.py  telegram.py  whatsapp.py
